my-apps/proxitok/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxitok-route
  namespace: proxitok
spec:

  parentRefs:
    - name: gateway-external    # Must match your Gateway's metadata.name
      namespace: gateway
      sectionName: https       # Must match your Gateway's listeners[].name
  hostnames:
    - "proxitok.nielszwemmer.nl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: proxitok-web
          port: 8080
